--- a/projects/ngx-slider/tsconfig.lib.json
+++ b/projects/ngx-slider/tsconfig.lib.json
@@ -14,6 +14,8 @@
   "angularCompilerOptions": {
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true,
     "enableResourceInlining": true
   },
   "exclude": [
