--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,18 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "module": "esnext",
+    "module": "es2020",
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
     "lib": ["es2018", "dom"],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "paths": {
-      "@jkuri/ngx-slider": ["projects/ngx-slider/src/public-api"]
+      "ngx-slider": ["projects/ngx-slider/src/public-api.ts"]
     }
   },
   "angularCompilerOptions": {
